--- a/InsurancePlans-Web/Pages/Index.cshtml
+++ b/InsurancePlans-Web/Pages/Index.cshtml
@@ -10,5 +10,8 @@
             <input type="text" class="form-control" asp-for="ZipCode" id="zipcode" placeholder="Zip Code">
             <span asp-validation-for="ZipCode" class="text-danger"></span>
         </div>
+        <div class="form-group">
+            <input type="submit" class="form-control">
+        </div>
     </form>
 </div>
